# aider-mod

./: .gitignore  LICENSE  README.md  aider-mod.py  aider-mod.sh  config.json  pyproject.toml  requirements.txt  setup.py  steps.json
adrm/: __init__.py  main.py
adrm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
adrm/core/: container.py  interfaces.py  models.py  state.py  workflow.py
adrm/infrastructure/: file_context.py  file_handlers.py
adrm/integrations/: aider_client.py
adrm/services/: initializer.py  standards.py  step_runner.py
config/: aider.yaml  config.yaml
scripts/: build.py  build_and_install.py  update_config.py
src/adrm/: __init__.py
tests/: test_integrations.py  test_main.py
