[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adrm"
version = "0.1.0"
description = "ADRM - Python package for automated dependency and requirement management"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Jeffrey Moya", email = "jeffrey.moya@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "click>=8.0.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.0.290",
]

[project.urls]
Homepage = "https://github.com/jeffreymoya/adrm"
Repository = "https://github.com/jeffreymoya/adrm.git"

[project.scripts]
adrm = "adrm.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/adrm"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = []
line-length = 88
target-version = "py38" 