[tool.poetry]
name = "adrm"
version = "0.1.0"
description = "A modified version of aider"
authors = ["Jeffrey Moya <jeffreymoya@example.com>"]
readme = "README.md"
packages = [{include = "adrm"}]
license = "MIT"
homepage = "https://github.com/jeffreymoya/adrm"
repository = "https://github.com/jeffreymoya/adrm.git"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
requests = "^2.31.0"
typer = "^0.9.0"
python-dotenv = "^1.0.0"
structlog = "^23.1.0"
rich = "^13.3.5"
pydantic = "==2.10.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
isort = "^5.0.0"
mypy = "^1.0.0"
ruff = "^0.0.290"
types-requests = "^2.31.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
adrm = "adrm.main:main"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = []
line-length = 88
target-version = "py38" 